test_suite5/ALAN/test_suite/alan-2022-examples/failing/000520_mutation.alan
source u05 begin > if 32 then relax end end
